<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121416"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/homeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <!--   S t a r t    o f    c o n t a i n e r -->


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/sample"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">


                    <com.tomer.fadingtextview.FadingTextView
                        android:id="@+id/quote"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="160dp"
                        android:layout_marginEnd="30dp"
                        android:fontFamily="@font/neue_regular"
                        android:gravity="center_vertical"
                        android:text="@string/quote6"
                        android:textAlignment="textEnd"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:timeout="3000"
                        tools:ignore="RtlCompat" />


                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/content1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:clickable="true"
                    app:layout_constraintTop_toBottomOf="@id/sample">

                    <com.google.android.material.divider.MaterialDivider
                        android:id="@+id/view1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:dividerInsetStart="30dp"
                        app:dividerInsetEnd="30dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <TextView
                        android:id="@+id/textone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="34dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/neue_regular"
                        android:text="@string/one"
                        android:textColor="#707070"
                        android:textSize="13sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/view1" />

                    <TextView
                        android:id="@+id/Txtgita"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="34dp"
                        android:layout_marginTop="25dp"
                        android:fontFamily="@font/neue_medium"
                        android:text="@string/gita"
                        android:textColor="#f5f5f5"
                        android:textSize="26sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textone" />

                    <TextView
                        android:id="@+id/auth1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="34dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/neue_regular"
                        android:text="@string/gitaAuthor"
                        android:textColor="#707070"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/Txtgita" />

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="119dp"
                        android:layout_marginTop="18dp"
                        android:layout_marginEnd="34dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/gita"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/view1" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/content2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:clickable="true"
                    app:layout_constraintTop_toBottomOf="@id/content1">

                    <com.google.android.material.divider.MaterialDivider
                        android:id="@+id/view2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:dividerInsetStart="30dp"
                        app:dividerInsetEnd="30dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <TextView
                        android:id="@+id/textTwo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="34dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/neue_regular"
                        android:text="@string/two"
                        android:textColor="#707070"
                        android:textSize="13sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/view2" />

                    <TextView
                        android:id="@+id/ramayana"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="34dp"
                        android:layout_marginTop="25dp"
                        android:fontFamily="@font/neue_medium"
                        android:text="@string/ramayana"
                        android:textColor="#f5f5f5"
                        android:textSize="26sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textTwo" />

                    <TextView
                        android:id="@+id/auth2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="34dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/neue_regular"
                        android:text="@string/ramayanaAuthor"
                        android:textColor="#707070"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ramayana" />

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="119dp"
                        android:layout_marginTop="18dp"
                        android:layout_marginEnd="34dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/ramayana"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/view2" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/content3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="93dp"
                    android:clickable="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/content2">

                    <com.google.android.material.divider.MaterialDivider
                        android:id="@+id/view3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:dividerInsetStart="30dp"
                        app:dividerInsetEnd="30dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <TextView
                        android:id="@+id/textThree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="34dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/neue_regular"
                        android:text="@string/three"
                        android:textColor="#707070"
                        android:textSize="13sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/view3" />

                    <TextView
                        android:id="@+id/bharata"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="34dp"
                        android:layout_marginTop="25dp"
                        android:fontFamily="@font/neue_medium"
                        android:text="@string/bharata"
                        android:textColor="#f5f5f5"
                        android:textSize="26sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textThree" />

                    <TextView
                        android:id="@+id/auth3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="34dp"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/neue_regular"
                        android:text="@string/gitaAuthor"
                        android:textColor="#707070"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/bharata" />

                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="119dp"
                        android:layout_marginTop="18dp"
                        android:layout_marginEnd="34dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/mahabharata"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/view3" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.core.widget.NestedScrollView>

        <!--   E n d    o f    c o n t a i n e r -->


        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/topBlur2"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="@drawable/blur_element_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.example.kosha.utils.BlurLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/blur_element_2"
                android:clickable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/blur_element"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/circleHome"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_marginStart="34dp"
                        android:layout_marginTop="60dp"
                        android:background="@drawable/circle_shape"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_width="17dp"
                        android:layout_height="17dp"
                        android:layout_marginStart="48dp"
                        android:layout_marginTop="74dp"
                        android:background="@drawable/home_icon"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="MissingConstraints" />

                    <View
                        android:id="@+id/line"
                        android:layout_width="2dp"
                        android:layout_height="45dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="60dp"
                        android:background="#f5f5f5"
                        app:layout_constraintStart_toEndOf="@id/circleHome"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textHead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="67dp"
                        android:fontFamily="@font/neue_regular"
                        android:text="@string/home"
                        android:textColor="#707070"
                        android:textSize="28sp"
                        app:layout_constraintStart_toEndOf="@id/line"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/hamburger"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="67dp"
                        android:layout_marginEnd="34dp"
                        android:background="@drawable/hamberger_work"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.example.kosha.utils.BlurLayout>


        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.example.kosha.utils.BlurLayout
            android:id="@+id/bottomBlur"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:background="@drawable/bottom_nav"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <com.google.android.material.bottomnavigation.BottomNavigationView
                style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
                android:layout_width="match_parent"
                android:layout_height="68dp"
                android:background="@drawable/bottom_nav"
                app:itemIconTint="@color/bottom_nav_color"
                app:labelVisibilityMode="unlabeled"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:menu="@menu/bottom_nav_menu" />


        </com.example.kosha.utils.BlurLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>